--- a/index.html
+++ b/index.html
@@ -337,8 +337,8 @@
         // ==========================================
         // 1. CONFIGURACIÓN SUPABASE (¡EDITAR AQUÍ!)
         // ==========================================
-        const SUPABASE_URL = 'https://TU_PROYECTO.supabase.co';
-        const SUPABASE_KEY = 'TU_ANON_KEY_PUBLICA';
+        const SUPABASE_URL = 'https://rofwgcrsfrovspiholbo.supabase.co';
+        const SUPABASE_KEY = 'sb_publishable_M7gyUpsbCPRopdrmDjEeLA_SHXlnP-C';
         
         const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
@@ -668,4 +668,5 @@
 
     </script>
 </body>
+
 </html>
