--- a/index.html
+++ b/index.html
@@ -416,8 +416,8 @@
         // 1. CONFIGURACIÓN SUPABASE (¡EDITAR AQUÍ!)
         // ==========================================
         // Reemplaza con tus valores de Supabase (Project Settings -> API)
-        const SUPABASE_URL = 'https://TU_PROYECTO.supabase.co';
-        const SUPABASE_KEY = 'TU_ANON_KEY_PUBLICA';
+        const SUPABASE_URL = 'https://rofwgcrsfrovspiholbo.supabase.co';
+        const SUPABASE_KEY = 'sb_publishable_M7gyUpsbCPRopdrmDjEeLA_SHXlnP-C';
         
         let supabase;
         try {
@@ -852,3 +852,4 @@
     </script>
 </body>
 </html>
+
