--- a/index.html
+++ b/index.html
@@ -439,8 +439,8 @@
     // =============================
     // CONFIG: Supabase
     // =============================
-    const SUPABASE_URL = "https://YOURPROJECT.supabase.co";
-    const SUPABASE_ANON_KEY = "YOUR_ANON_KEY";
+    const SUPABASE_URL = "https://rofwgcrsfrovspiholbo.supabase.co";
+    const SUPABASE_ANON_KEY = "rofwgcrsfrovspiholbo";
 
     let sb = null;
 
@@ -1317,3 +1317,4 @@
   </script>
 </body>
 </html>
+
