--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
     // CONFIG: Supabase
     // =============================
     const SUPABASE_URL = "https://rofwgcrsfrovspiholbo.supabase.co";
-    const SUPABASE_ANON_KEY = "rofwgcrsfrovspiholbo";
+    const SUPABASE_ANON_KEY = "sb_publishable_M7gyUpsbCPRopdrmDjEeLA_SHXlnP-C";
 
     let sb = null;
 
@@ -1317,4 +1317,5 @@
   </script>
 </body>
 </html>
+
 
