--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@
 
     // === CONFIG SUPABASE ===
     // Si este proyecto NO es el tuyo, reemplaza por tu URL real (Settings -> API -> Project URL)
-    const SUPABASE_URL = "https://xhhssgsrulmxwkcyncvo.supabase.co";
+    const SUPABASE_URL = "https://rofwgcrsfrovspiholbo.supabase.co";
     const SUPABASE_ANON_KEY = "sb_publishable_M7gyUpsbCPRopdrmDjEeLA_SHXlnP-C";
     const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
@@ -1303,3 +1303,4 @@
   </script>
 </body>
 </html>
+
